@@ -11,7 +11,8 @@ API Reference
     wizard
     pyson
     transaction
-    tools/singleton
+    tools/index
     pool
     rpc
     sendmail
+    filestore
