@@ -1,15 +1,14 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
-import os
-import hashlib
+from sql import Null
 from sql.operators import Concat
 
 from ..model import ModelView, ModelSQL, fields, Unique
-from ..config import config
 from .. import backend
 from ..transaction import Transaction
 from ..pyson import Eval
 from .resource import ResourceMixin
+from ..filestore import filestore
 
 __all__ = [
     'Attachment',
@@ -39,8 +38,7 @@ class Attachment(ResourceMixin, ModelSQL, ModelView):
     link = fields.Char('Link', states={
             'invisible': Eval('type') != 'link',
             }, depends=['type'])
-    digest = fields.Char('Digest', size=32)
-    collision = fields.Integer('Collision')
+    file_id = fields.Char('File ID', readonly=True)
     data_size = fields.Function(fields.Integer('Data size', states={
                 'invisible': Eval('type') != 'data',
                 }, depends=['type']), 'get_data')
@@ -77,13 +75,25 @@ class Attachment(ResourceMixin, ModelSQL, ModelView):
             table.drop_column('res_model')
             table.drop_column('res_id')
 
+        # Migration from 4.0: merge digest and collision into file_id
+        if table.column_exist('digest') and table.column_exist('collision'):
+            cursor.execute(*attachment.update(
+                    [attachment.file_id],
+                    [attachment.digest],
+                    where=(attachment.collision == 0)
+                    | (attachment.collision == Null)))
+            cursor.execute(*attachment.update(
+                    [attachment.file_id],
+                    [Concat(Concat(attachment.digest, '-'),
+                            attachment.collision)],
+                    where=(attachment.collision != 0)
+                    & (attachment.collision != Null)))
+            table.drop_column('digest')
+            table.drop_column('collision')
+
     @staticmethod
     def default_type():
         return 'data'
-
-    @staticmethod
-    def default_collision():
-        return 0
 
     def get_data(self, name):
         db_name = Transaction().database.name
@@ -92,22 +102,16 @@ class Attachment(ResourceMixin, ModelSQL, ModelView):
         value = None
         if name == 'data_size' or format_ == 'size':
             value = 0
-        if self.digest:
-            filename = self.digest
-            if self.collision:
-                filename = filename + '-' + str(self.collision)
-            filename = os.path.join(config.get('database', 'path'), db_name,
-                    filename[0:2], filename[2:4], filename)
+        if self.file_id:
             if name == 'data_size' or format_ == 'size':
                 try:
-                    statinfo = os.stat(filename)
-                    value = statinfo.st_size
+                    value = filestore.size(self.file_id, prefix=db_name)
                 except OSError:
                     pass
             else:
                 try:
-                    with open(filename, 'rb') as file_p:
-                        value = fields.Binary.cast(file_p.read())
+                    value = fields.Binary.cast(
+                        filestore.get(self.file_id, prefix=db_name))
                 except IOError:
                     pass
         return value
@@ -117,51 +121,11 @@ class Attachment(ResourceMixin, ModelSQL, ModelView):
         if value is None:
             return
         transaction = Transaction()
-        cursor = transaction.connection.cursor()
-        table = cls.__table__()
         db_name = transaction.database.name
-        directory = os.path.join(config.get('database', 'path'), db_name)
-        if not os.path.isdir(directory):
-            os.makedirs(directory, 0770)
-        digest = hashlib.md5(value).hexdigest()
-        directory = os.path.join(directory, digest[0:2], digest[2:4])
-        if not os.path.isdir(directory):
-            os.makedirs(directory, 0770)
-        filename = os.path.join(directory, digest)
-        collision = 0
-        if os.path.isfile(filename):
-            with open(filename, 'rb') as file_p:
-                data = file_p.read()
-            if value != data:
-                cursor.execute(*table.select(table.collision,
-                        where=(table.digest == digest)
-                        & (table.collision != 0),
-                        group_by=table.collision,
-                        order_by=table.collision))
-                collision2 = 0
-                for row in cursor.fetchall():
-                    collision2 = row[0]
-                    filename = os.path.join(directory,
-                            digest + '-' + str(collision2))
-                    if os.path.isfile(filename):
-                        with open(filename, 'rb') as file_p:
-                            data = file_p.read()
-                        if value == data:
-                            collision = collision2
-                            break
-                if collision == 0:
-                    collision = collision2 + 1
-                    filename = os.path.join(directory,
-                            digest + '-' + str(collision))
-                    with open(filename, 'wb') as file_p:
-                        file_p.write(value)
-        else:
-            with open(filename, 'wb') as file_p:
-                file_p.write(value)
+        file_id = filestore.set(value, prefix=db_name)
         cls.write(attachments, {
-            'digest': digest,
-            'collision': collision,
-            })
+                'file_id': file_id,
+                })
 
     @fields.depends('description')
     def on_change_with_summary(self, name=None):
